# tether

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  PKGBUILD  README.md
apple/: .gitignore  Info.plist
apple/Tether/: ContentView.swift  Tether.entitlements  TetherApp.swift
apple/Tether.xcodeproj/: project.pbxproj
apple/Tether/Assets.xcassets/AppIcon.appiconset/: Contents.json
apple/Tether/Protocol/: TetherMessage.swift  TetherProtocol.swift
apple/Tether/Services/: BonjourDiscovery.swift  BonjourDiscovery.swift.patch  CertificateManager.swift  TetherConnection.swift  TetherServer.swift
apple/Tether/ViewModels/: TetherViewModel.swift
apple/Tether/Views/: AppStoreScreenshots.swift  ClipboardView.swift  DashboardView.swift  FilesView.swift  PairingView.swift  SettingsView.swift
apple/Tether/Views/Components/: ConnectionStatusView.swift
apple/TetherFramework/: Package.swift
apple/TetherFramework/Sources/TetherFramework/: BonjourDiscovery.swift  CertificateManager.swift  SharePayload.swift  ShareSender.swift  TetherConnection.swift  TetherMessage.swift  TetherProtocol.swift  TetherServer.swift
apple/TetherShareExtension/: Info.plist  ShareViewController.swift
apple/TetherTests/: TetherTests.swift
apple/TetherUITests/: TetherUITests.swift  TetherUITestsLaunchTests.swift
apple/tether.icon/: icon.json
docs/: DESIGN.md  PROTOCOL.md  TODO.md  store-listing.md
docs/man/man1/: tether-gtk.1  tether-gtk.1.in  tether.1  tether.1.in
docs/man/man8/: tetherd.8  tetherd.8.in
extension/: README.md  build.sh  manifest-browser.json  manifest-mail.json  package-lock.json  package.json
extension/host/: com.tether.extension.chrome.json.in  com.tether.extension.json  com.tether.extension.json.in  com.tether.extension.mozilla.json.in  tether-native-host  tether-native-host.in
extension/src/background/: background.js
extension/src/content/: autofill.js
extension/src/mail/: extractor.js
extension/src/shared/: native.js
extension/test/: autofill.test.js  extractor.test.js  integration.test.js  native.test.js
extension/test/fixtures/: adobe.eml  amazon-format.eml  bank-verification.eml  google-auth.eml  google-otp.html  microsoft-alphanumeric.eml  mybank-html-otp.eml  mybank-otp.eml  numeric-otp.html  order-confirmation.eml  postal-code.html  roku.html  split-otp.html  std-autocomplete.html  walmart.html
scripts/: generate_icons.sh  release.sh
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/tether/: base64.hpp  client.hpp  clipboard.hpp  core.hpp  crypto.hpp  discovery.hpp  event_loop.hpp  file_transfer.hpp  log.hpp  net.hpp  version.hpp.in  wayland.hpp
src/core/src/: base64.cpp  client.cpp  clipboard.cpp  core.cpp  crypto.cpp  discovery.cpp  event_loop.cpp  file_transfer.cpp  net.cpp  wayland.cpp
src/core/src/wayland_protocols/: wayland.cpp  wayland.hpp  wlr-data-control-unstable-v1.cpp  wlr-data-control-unstable-v1.hpp
src/daemon/: CMakeLists.txt  main.cpp  notification.cpp  notification.hpp
src/dialog/: CMakeLists.txt  main.cpp
src/gtk/: CMakeLists.txt  main.cpp  tether-gtk.desktop  tether-gtk.desktop.in
test/: CMakeLists.txt  otp.html  test_base64.cpp  test_crypto.cpp  test_discovery.cpp  test_file_transfer.cpp
